--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alcatraz Accordion</title>
     <script type="module" src="index.js"></script>
+    <!-- 
+        Use CSS custom properties to alter styles within the component.
+    -->
+    <style>
+      :root {
+        --alcatraz-accordion-border: 2px solid #ddd;
+        --alcatraz-accordion-border-radius: 4px;
+      }
+    </style>
   </head>
   <body>
-    <alcatraz-accordion multiPanel="true">
+    <alcatraz-accordion>
       <alcatraz-accordion-panel label="K2" expanded="true">
         <p>Age: 13</p>
         <p>Color: gray</p>
@@ -16,7 +25,7 @@
         <p>Age: 13</p>
         <p>Color: orange</p>
       </alcatraz-accordion-panel>
-      <alcatraz-accordion-panel label="Minnie Mitzie Tiny Puss Forde">
+      <alcatraz-accordion-panel label="Minnie Mitzie">
         <p>Age: 4</p>
         <p>Color: gray</p>
       </alcatraz-accordion-panel>
